--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "immutability-helper": "^3.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "msw": "^0.28.2",
     "prettier": "2.2.1"
   }
 }
